--- a/JSCamera/index.html
+++ b/JSCamera/index.html
@@ -251,8 +251,8 @@
         }
     }
 
-    // start(HDEnvironmentConstraints);
-    start(testConstraints);
+    start(HDEnvironmentConstraints);
+    //start(testConstraints);
 
     function start(constraints) {
         if (typeof constraints.video.facingMode === 'undefined') {
