Stopped the fancy gradient

--- a/JSCamera/index.html
+++ b/JSCamera/index.html
@@ -18,7 +18,6 @@
 
             <button class="switch">🔄</button>
         </div> -->
-
         <svg class="boundingSvg">
             <defs>
                 <linearGradient id="topBoundingGradient" gradientTransform="rotate(90)">
@@ -35,6 +34,7 @@
             <rect class="bottomBox" fill="url('#bottomBoundingGradient')" />
             <circle class="outerCircle"></circle>
             <circle class="innerCircle"></circle>
+            <text x="200" y="200">Hello</text>
         </svg>
 
         <p class="deets"></p>
