stops using flex

--- a/JSCamera/index.html
+++ b/JSCamera/index.html
@@ -273,8 +273,8 @@
         }
     }
 
-    start(HDEnvironmentConstraints);
-    //start(testConstraints);
+    //start(HDEnvironmentConstraints);
+    start(testConstraints);
 
     function start(constraints) {
         if (typeof constraints.video.facingMode === 'undefined') {
