--- a/Compression/index.html
+++ b/Compression/index.html
@@ -12,7 +12,7 @@
 		<input type="file" accept="image/*" class="image">
 		<button>Compress!</button>
 	</div>	
-	<img/>
+	<img src='SINHAMAN.jpg'/>
 	<canvas style="display: none;"></canvas>
 </body>
 
