--- a/JSCamera/index.html
+++ b/JSCamera/index.html
@@ -11,31 +11,26 @@
         <video class="" playsinline autoplay></video>
         <canvas class="hidden"></canvas>
         <canvas class="highres hidden"></canvas>
-        <!-- <div class="controls">
-            <button class="snapShot">📷</button>
+        <div clas="hidden">
+            <svg class="boundingSvg">
+                <defs>
+                    <linearGradient id="topBoundingGradient" gradientTransform="rotate(90)">
+                        <stop offset="5%" stop-color="black" />
+                        <stop offset="95%" stop-color="black" stop-opacity="0.7" />
+                    </linearGradient>
+                    <linearGradient id="bottomBoundingGradient" gradientTransform="rotate(90)">
+                        <stop offset="5%" stop-color="black" stop-opacity="0.7" />
+                        <stop offset="95%" stop-color="black" />
+                    </linearGradient>
 
-            <a class="save"><button>💾</button></a>
-
-            <button class="switch">🔄</button>
-        </div> -->
-        <svg class="boundingSvg">
-            <defs>
-                <linearGradient id="topBoundingGradient" gradientTransform="rotate(90)">
-                    <stop offset="5%" stop-color="black" />
-                    <stop offset="95%" stop-color="black" stop-opacity="0.7" />
-                </linearGradient>
-                <linearGradient id="bottomBoundingGradient" gradientTransform="rotate(90)">
-                    <stop offset="5%" stop-color="black" stop-opacity="0.7" />
-                    <stop offset="95%" stop-color="black" />
-                </linearGradient>
-
-            </defs>
-            <rect class="topBox" fill="url('#topBoundingGradient')" />
-            <rect class="bottomBox" fill="url('#bottomBoundingGradient')" />
-            <circle class="outerCircle"></circle>
-            <circle class="innerCircle"></circle>
-            <text x="200" y="200">Hello</text>
-        </svg>
+                </defs>
+                <rect class="topBox" fill="url('#topBoundingGradient')" />
+                <rect class="bottomBox" fill="url('#bottomBoundingGradient')" />
+                <circle class="outerCircle"></circle>
+                <circle class="innerCircle"></circle>
+                <text x="200" y="200">Hello</text>
+            </svg>
+        </div>
 
         <p class="deets"></p>
     </div>
@@ -295,9 +290,9 @@
         var gamma = event.gamma;
 
         deets.innerText = "absolute: " + absolute +
-                        " alpha: " + alpha +
-                        " beta: " + beta +
-                        " gamma: " + gamma;
+            " alpha: " + alpha +
+            " beta: " + beta +
+            " gamma: " + gamma;
 
         // Do stuff with the new orientation data
     }
