--- a/JSCamera/ios.html
+++ b/JSCamera/ios.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="JSCamera.css">
+    <link rel="stylesheet" type="text/css" href="ios.css">
     <title>Card Upload</title>
 </head>
 
