--- a/Countdown/index.html
+++ b/Countdown/index.html
@@ -25,13 +25,13 @@
   </head>
   
   <div>
-    <h1 class="content">Time left in internship: </h1>  
+    <h1 class="content">Time left at UNiDAYS: </h1>  
     <h1 class="content" id="demo"; >?</h1> 
   </div>
  
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("July 16, 2019 17:30:00").getTime();
+var countDownDate = new Date("August 9, 2019 16:00:00").getTime();
 // Update the count down every 1 second
 var x = setInterval(function() {
   // Get todays date and time
