--- a/Countdown/index.html
+++ b/Countdown/index.html
@@ -39,12 +39,13 @@ var x = setInterval(function() {
   // Find the distance between now an the count down date
   var distance = countDownDate - now;
   // Time calculations for days, hours, minutes and seconds
-  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  var weeks = Math.floor(distance / (1000 * 60 * 60 * 24 * 7));
+  var days = Math.floor((distance % (1000 * 60 * 60 * 24 * 7)) / (1000 * 60 * 60 * 24));
   var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
   var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
   var seconds = Math.floor((distance % (1000 * 60)) / 1000);
   // Display the result in the element with id="demo"
-  document.getElementById("demo").innerHTML =days + "d " + hours + "h "
+  document.getElementById("demo").innerHTML = weeks + "w " + days + "d " + hours + "h "
   + minutes + "m " + seconds + "s ";
   // If the count down is finished, write some text 
   if (distance < 0) {
