--- a/Countdown/index.html
+++ b/Countdown/index.html
@@ -21,17 +21,17 @@
     </script>
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-    <title>Countdown to the end of the internship</title>
+    <title>Countdown to deadline</title>
   </head>
   
   <div>
-    <h1 class="content">Time left at UNiDAYS: </h1>  
+    <h1 class="content">Time left: </h1>  
     <h1 class="content" id="demo"; >?</h1> 
   </div>
  
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("August 9, 2019 16:00:00").getTime();
+var countDownDate = new Date("September 27, 2019 13:00:00").getTime();
 // Update the count down every 1 second
 var x = setInterval(function() {
   // Get todays date and time
@@ -50,7 +50,7 @@ var x = setInterval(function() {
   // If the count down is finished, write some text 
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("demo").innerHTML = "It's over!";
+    document.getElementById("demo").innerHTML = "HAND IT IN!";
   }
 }, 1000);
 </script>
