--- a/Countdown/index.html
+++ b/Countdown/index.html
@@ -31,7 +31,7 @@
  
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("September 27, 2019 13:00:00").getTime();
+var countDownDate = new Date("May 22, 2019 14:00:00").getTime();
 // Update the count down every 1 second
 var x = setInterval(function() {
   // Get todays date and time
@@ -45,7 +45,7 @@ var x = setInterval(function() {
   var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
   var seconds = Math.floor((distance % (1000 * 60)) / 1000);
   // Display the result in the element with id="demo"
-  document.getElementById("demo").innerHTML = hours + "h "
+  document.getElementById("demo").innerHTML = days + "d " + hours + "h "
   + minutes + "m " + seconds + "s ";
   // If the count down is finished, write some text 
   if (distance < 0) {
