--- a/Countdown/index.html
+++ b/Countdown/index.html
@@ -29,11 +29,13 @@
     <h1 class="content" id="demo"; >?</h1> 
   </div>
  
-<script>
-// Set the date we're counting down to
-var countDownDate = new Date("May 22, 2020 14:00:00").getTime();
-// Update the count down every 1 second
-var x = setInterval(function() {
+  <script>
+  // Set the date we're counting down to
+  //var countDownDate = new Date("May 22, 2020 14:00:00").getTime();
+  var countDownDate = new Date("October 23, 2019 14:00:00").getTime();  
+  
+  // Update the count down every 1 second
+  var x = setInterval(function() {
   // Get todays date and time
   var now = new Date().getTime();
   // Find the distance between now an the count down date
