--- a/Countdown/fyp.html
+++ b/Countdown/fyp.html
@@ -16,11 +16,11 @@
   gtag('config', 'UA-110467141-1');
 </script>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-    <title>Countdown to starting work :S </title>
+    <title>Countdown to Final Year Project Hand in.</title>
   </head>
   
   <div>
-    <h1> Time Until Starting Work: </h1>  
+    <h1> Time Until FYP Deadline: </h1>  
     <h1 id="demo"; >?</h1> 
   </div>
  
@@ -44,7 +44,7 @@
   // If the count down is finished, write some text 
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("demo").innerHTML = "GET TO WORK!";
+    document.getElementById("demo").innerHTML = "LORD, I HOPE YOU'VE HANDED IT IN!";
   }
 }, 1000);
 </script>
