--- a/Countdown/index.html
+++ b/Countdown/index.html
@@ -21,7 +21,7 @@
     </script>
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-    <title>Countdown to deadline</title>
+    <title>Countdown to PID Deadline: </title>
   </head>
   
   <div>
@@ -47,8 +47,8 @@
   var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
   var seconds = Math.floor((distance % (1000 * 60)) / 1000);
   // Display the result in the element with id="demo"
-  document.getElementById("demo").innerHTML = weeks + "w " + days + "d " + hours + "h "
-  + minutes + "m " + seconds + "s ";
+  document.getElementById("demo").innerHTML = hours + "h "
+  + minutes + "m " + seconds + "s "; // weeks + "w " + days + "d " +
   // If the count down is finished, write some text 
   if (distance < 0) {
     clearInterval(x);
