--- a/Countdown/index.html
+++ b/Countdown/index.html
@@ -25,7 +25,7 @@
   </head>
   
   <div>
-    <h1 class="content">Time left: </h1>  
+    <h1 class="content">Time until PID deadline: </h1>  
     <h1 class="content" id="demo"; >?</h1> 
   </div>
  
