--- a/Countdown/index.html
+++ b/Countdown/index.html
@@ -20,17 +20,17 @@
     </script>
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-    <title>Countdown to University of Hull's Languages and their Compilers Coursework</title>
+    <title>Countdown to University of Hull's Embedded Systems Development Coursework</title>
   </head>
   
   <div>
-    <h1 class="content">Time until L&C deadline: </h1>  
+    <h1 class="content">Time until Embedded ACW deadline: </h1>  
     <h1 class="content" id="demo"; >?</h1> 
   </div>
  
   <script>
   
-  var countDownDate = new Date("November 13, 2019 14:00:00").getTime();  
+  var countDownDate = new Date("December 13, 2019 14:00:00").getTime();  
   
   // Update the count down every 1 second
   var x = setInterval(function() {
