--- a/Countdown/index.html
+++ b/Countdown/index.html
@@ -48,7 +48,7 @@
   var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
   var seconds = Math.floor((distance % (1000 * 60)) / 1000);
   // Display the result in the element with id="demo"
-  document.getElementById("demo").innerHTML = days + "d " + hours + "h "
+  document.getElementById("demo").innerHTML = hours + "h " //days + "d " +
   + minutes + "m " + seconds + "s "; // weeks + "w " + 
   // If the count down is finished, write some text 
   if (distance < 0) {
