--- a/roda/colin.html
+++ b/roda/colin.html
@@ -7,8 +7,8 @@
       gtag('js', new Date());
       gtag('config', 'UA-110467141-2');
     </script>
-    <link rel="icon" href="http://jakegore.co.uk/rob-happy.gif" type="image/gif" />
-    <link rel="stylesheet" href="bb8css.css">
+    <link rel="icon" href="http://jakegore.co.uk/roda/rob-happy.gif" type="image/gif" />
+    <link rel="stylesheet" href="roda/bb8css.css">
     <meta name="author" content="Jake Gore">
     <meta name="description" content="Will Roda ever get his 2080ti?">
 </head>
