--- a/Countdown/index.html
+++ b/Countdown/index.html
@@ -21,18 +21,18 @@
 		</script>
 
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-		<title>Countdown to University of Hull's Embedded Systems Development Exam</title>
+		<title>Countdown to University of Hull's Languages and Their Compilers Exam</title>
 	</head>
 
 	<body>
 		<div>
-			<h1 class="content">Time until Embedded Exam: </h1>  
+			<h1 class="content">Time until L&C Exam: </h1>  
 			<h1 class="content" id="time"; ></h1> 
 		</div>
 	</body>
 
 	<script>
-		var countDownDate = new Date("January 8, 2020 09:00:00").getTime();  
+		var countDownDate = new Date("January 15, 2020 14:00:00").getTime();  
 
 		var x = setInterval(function() {
 			var timeString = "";
@@ -43,24 +43,41 @@
 			if (delta < 0) {
 				clearInterval(x);
 				document.getElementById("time").innerHTML = "GOOD LUCK!";
+			} else {
+				var dispPrev = true;
+
+				var weeks = Math.floor(delta / (1000 * 60 * 60 * 24 * 7));
+				if(weeks > 0) {
+					timeString += weeks + "w ";
+				} else {
+					dispPrev = false;
+				}
+
+				var days = Math.floor((delta % (1000 * 60 * 60 * 24 * 7)) / (1000 * 60 * 60 * 24));  
+				if(days > 0 || dispPrev === true) {
+					dispPrev = true;
+					timeString += days + "d ";
+				} else {
+					dispPrev = false;
+				}
+
+				var hours = Math.floor((delta % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+				if(hours > 0 || dispPrev === true) {
+					dispPrev = true;
+					timeString += hours + "h ";
+				}
+
+				var minutes = Math.floor((delta % (1000 * 60 * 60)) / (1000 * 60));
+				if(minutes > 0 || dispPrev === true) {
+					dispPrev = true;
+					timeString += minutes + "m ";
+				}
+
+				var seconds = Math.floor((delta % (1000 * 60)) / 1000);
+				timeString += seconds + "s ";
+
+				document.getElementById("time").innerHTML = timeString;
 			}
-
-			var weeks = Math.floor(delta / (1000 * 60 * 60 * 24 * 7));
-			if(weeks > 0) timeString += weeks + "w ";
-
-			var days = Math.floor((delta % (1000 * 60 * 60 * 24 * 7)) / (1000 * 60 * 60 * 24));  
-			if(days > 0) timeString += days + "d ";
-
-			var hours = Math.floor((delta % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-			if(hours > 0) timeString += hours + "h ";
-
-			var minutes = Math.floor((delta % (1000 * 60 * 60)) / (1000 * 60));
-			if(minutes > 0) timeString += minutes + "m ";
-
-			var seconds = Math.floor((delta % (1000 * 60)) / 1000);
-			timeString += seconds + "s ";
-
-			document.getElementById("time").innerHTML = timeString;
 		}, 1000);
 	</script>
 </html>
