--- a/Countdown/pension.html
+++ b/Countdown/pension.html
@@ -1,52 +1,86 @@
 <!DOCTYPE html>
 <html>
-  <style>
-    h1 {
-    font-family: Tahoma, Geneva, sans-serif;
-    font-size:140px}
-  </style>
-  
-  <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110467141-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'UA-110467141-1');
-</script>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-  </head>
-  
-  <div>
-    <h1> Time until Advanced Programming ACW hand in: </h1>  
-    <h1 id="demo"; >?</h1>
-  </div>
- 
-<script>
-// Set the date we're counting down to
-var countDownDate = new Date("Feb 8, 2066 00:00:00").getTime();
-// Update the count down every 1 second
-var x = setInterval(function() {
-  // Get todays date and time
-  var now = new Date().getTime();
-  // Find the distance between now an the count down date
-  var distance = countDownDate - now;
-  // Time calculations for days, hours, minutes and seconds
-  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-  // Display the result in the element with id="demo"
-  document.getElementById("demo").innerHTML = days + "d " + hours + "h "
-  + minutes + "m " + seconds + "s ";
-  // If the count down is finished, write some text 
-  if (distance < 0) {
-    clearInterval(x);
-    document.getElementById("demo").innerHTML = "EXPIRED";
-  }
-}, 1000);
-</script>
-  
-</body>
+	<style>
+		h1 {
+			font-family: Tahoma, Geneva, sans-serif;
+			font-size:700%
+		}
+		.content{
+			max-width: 100%;
+		}
+	</style>
+
+	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110467141-2"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			gtag('config', 'UA-110467141-2');
+		</script>
+
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+		<title>Countdown to When I Might Retire.</title>
+	</head>
+
+	<body>
+		<div>
+			<h1 class="content">Time Until Retirement: </h1>  
+			<h1 class="content" id="time"; ></h1> 
+		</div>
+	</body>
+
+	<script>
+		var countDownDate = new Date("Feb 8, 2066 00:00:00").getTime();  
+		time();
+
+		var x = setInterval(time, 1000);
+
+		function time() {
+			var timeString = "";
+			var now = new Date().getTime();
+			
+			var delta = countDownDate - now;
+
+			if (delta < 0) {
+				clearInterval(x);
+				document.getElementById("time").innerHTML = "Enjoy!";
+			} else {
+				var dispPrev = true;
+
+				var weeks = Math.floor(delta / (1000 * 60 * 60 * 24 * 7));
+				if(weeks > 0) {
+					timeString += weeks + "w ";
+				} else {
+					dispPrev = false;
+				}
+
+				var days = Math.floor((delta % (1000 * 60 * 60 * 24 * 7)) / (1000 * 60 * 60 * 24));  
+				if(days > 0 || dispPrev === true) {
+					dispPrev = true;
+					timeString += days + "d ";
+				} else {
+					dispPrev = false;
+				}
+
+				var hours = Math.floor((delta % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+				if(hours > 0 || dispPrev === true) {
+					dispPrev = true;
+					timeString += hours + "h ";
+				}
+
+				var minutes = Math.floor((delta % (1000 * 60 * 60)) / (1000 * 60));
+				if(minutes > 0 || dispPrev === true) {
+					dispPrev = true;
+					timeString += minutes + "m ";
+				}
+
+				var seconds = Math.floor((delta % (1000 * 60)) / 1000);
+				timeString += seconds + "s ";
+
+				document.getElementById("time").innerHTML = timeString;
+			}
+		}
+	</script>
 </html>
