Updated hand in date

--- a/Countdown/fyp.html
+++ b/Countdown/fyp.html
@@ -21,7 +21,7 @@
 		</script>
 
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-		<title>Countdown to University of Hull's Final Year Project Hand in.</title>
+		<title>Countdown to University of Hull's Computer Science Final Year Project Hand in.</title>
 	</head>
 
 	<body>
@@ -32,7 +32,7 @@
 	</body>
 
 	<script>
-		var countDownDate = new Date("April 22, 2020 14:00:00").getTime();  
+		var countDownDate = new Date("April 23, 2020 14:00:00").getTime();  
 		time();
 
 		var x = setInterval(time, 1000);
