--- a/Countdown/index.html
+++ b/Countdown/index.html
@@ -21,18 +21,18 @@
 		</script>
 
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-		<title>Countdown to University of Hull's Languages and Their Compilers Exam</title>
+		<title>Countdown to University of Hull's Computer Science Final Year Project Hand in.</title>
 	</head>
 
 	<body>
 		<div>
-			<h1 class="content">Time until L&C Exam: </h1>  
+			<h1 class="content">Time Until FYP Deadline: </h1>  
 			<h1 class="content" id="time"; ></h1> 
 		</div>
 	</body>
 
 	<script>
-		var countDownDate = new Date("January 15, 2020 14:00:00").getTime();  
+		var countDownDate = new Date("April 23, 2020 14:00:00").getTime();  
 		time();
 
 		var x = setInterval(time, 1000);
@@ -45,7 +45,7 @@
 
 			if (delta < 0) {
 				clearInterval(x);
-				document.getElementById("time").innerHTML = "GOOD LUCK!";
+				document.getElementById("time").innerHTML = "LORD, I HOPE YOU'VE HANDED IT IN!";
 			} else {
 				var dispPrev = true;
 
