new layout, added linkedin link

--- a/index.html
+++ b/index.html
@@ -20,47 +20,45 @@
 	</head>
 
 	<style type="text/css">
-		.nice-font{font-family: 'Bitter', serif;}
-		.sans-serif{font-family: 'Source Sans Pro', sans-serif;}
-		.center{
+		.nice-font {
+			font-family: 'Bitter', serif;
+		}
+		.sans-serif {
+			font-family: 'Source Sans Pro', sans-serif;
+		}
+		.center {
 			display: flex;
 			justify-content: center;
 		}
-		.left{
-			display: flex;
-			justify-content: flex-start;
+		p {
+			font-size: 2.5em;
+			text-align: center;
 		}
-		.inner{
-			width:100%;
-		}
-		.bar{
-			height: 100%;
-		}
-		p{
-			font-size: 40px;
-			margin-right: 1em;
-		}
-		h1{
+		h1 {
 			font-size: 4em;
-			margin-right: 1em;
-			max-width: 3em;
 		}
-		body{
-			height: 100%;
+		svg {
+			height: 82px;
+			width: 82px;
+		}
+		.linked-in {
+			width: 22px;
+			margin-left: 50%;
+		}
+		.corner {
+			position: absolute;
+			top: 0;
+			left: 0;
 		}
 	</style>
-<div class="left">
-	<div class="left bar">
+	<body>
 		<h1 class="center nice-font">Jake Gore</h1>
-	</div>
-	<body class="center">
-		<div>
-		<div class="center inner">
-			
-		
-		<p class="center sans-serif">I am a second year Computer Science student at the University of Hull. Currently, on a year in industry working as an intern software engineer for UNiDAYS in Nottingham.</p>
-		</div>
-	</div>
+		<p class="center sans-serif">A final year Computer Science student at the University of Hull.</p>
+		<a class="center" href="https://www.linkedin.com/in/jakegore" title="Linkedin Profile Link">
+			<svg class="center">
+				<path d="m73 1h-64c-4 0-8 4-8 8v64c0 4 4 8 8 8h64c4 0 8-4 8-8v-64c0-4-4-8-8-8zm-48 68h-12v-36h12v36zm-6-41c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zm50 41h-12v-16c0-6-3-8-6-8-4 0-6 3-6 9v15h-12v-36h12v5c2-3 6-5 10-5 9 0 14 4 14 15v22z"></path>
+			</svg>
+		</a>
 	</body>
 </div>
 </html>
