removed unused styles

--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 		  gtag('js', new Date());
 		  gtag('config', 'UA-110467141-2');
 		</script>
-				<!-- Global site tag (gtag.js) - Google Analytics -->
 
 		<link href="https://fonts.googleapis.com/css?family=Bitter|Source+Sans+Pro:300" rel="stylesheet">
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 		<title>Jake Gore // Software Engineer</title>
 		<meta name="author" content="Jake Gore">
-		<meta name="description" content="The home of Jake Gore, a computer science student at the University of Hull.">
+		<meta name="description" content="The online home of Jake Gore, a computer science student at the University of Hull.">
 	</head>
 
 	<style type="text/css">
@@ -37,28 +36,29 @@
 		h1 {
 			font-size: 4em;
 		}
-		svg {
+		.linkedin {
 			height: 82px;
 			width: 82px;
 		}
-		.linked-in {
-			width: 22px;
-			margin-left: 50%;
-		}
-		.corner {
+		.comment {
+			font-size: 1.5em;
+			color: #56a64a;
 			position: absolute;
-			top: 0;
 			left: 0;
+			right: 0;
+			bottom: 0;
 		}
 	</style>
 	<body>
 		<h1 class="center nice-font">Jake Gore</h1>
 		<p class="center sans-serif">A final year Computer Science student at the University of Hull.</p>
 		<a class="center" href="https://www.linkedin.com/in/jakegore" title="Linkedin Profile Link">
-			<svg class="center">
+			<svg class="center linkedin">
 				<path d="m73 1h-64c-4 0-8 4-8 8v64c0 4 4 8 8 8h64c4 0 8-4 8-8v-64c0-4-4-8-8-8zm-48 68h-12v-36h12v36zm-6-41c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zm50 41h-12v-16c0-6-3-8-6-8-4 0-6 3-6 9v15h-12v-36h12v5c2-3 6-5 10-5 9 0 14 4 14 15v22z"></path>
 			</svg>
 		</a>
+
+		<p class="center sans-serif comment">// TODO: Make rest of website.</p>
 	</body>
 </div>
 </html>
