--- a/whitby/index.html
+++ b/whitby/index.html
@@ -19,7 +19,7 @@
 	}
   h1{
     font-family: "Comic Sans MS", cursive, sans-serif;
-    font-size: 300px;
+    font-size: 240px;
     text-align: center;
     margin: 0;
     z-index: 10000;
@@ -93,7 +93,7 @@
 </style>
 
 <div class="all">
-<h1 class="rainbow">WELCOME!</h1>
+<h1 class="rainbow">WELCOME TO THE WONDERFUL WORLD OF WHITBY!</h1>
 <div class="">
 	<div class="rowofrobs allrobs">
 		<img class="loading clockwise" src="http://jakegore.co.uk//whitby/matt.jpg">
