--- a/whitby/index.html
+++ b/whitby/index.html
@@ -9,7 +9,8 @@
     </script>
     <link rel="icon" href="/whitby/matt.jpg" type="image/jpg" />
     <meta name="author" content="Jake Gore">
-    <meta name="description" content="Welcome to the Wonderful World of Whitby!">
+	<meta name="description" content="Welcome to the Wonderful World of Whitby!">
+	<title>Welcome to the Wonderful World of Whitby!</title>
 </head>
 
 <style>
