--- a/whitby/index.html
+++ b/whitby/index.html
@@ -20,7 +20,7 @@
 	}
   h1{
     font-family: "Comic Sans MS", cursive, sans-serif;
-    font-size: 240px;
+    font-size: 11.3em;
     text-align: center;
     margin: 0;
     z-index: 10000;
